# Editeur-de-Save-Pokmeon-ZA

./: .gitignore  build_exe.spec  pokemon_legends_za_editor.spec  pyproject.toml  requirements.txt  run.py
assets/presets/: berry_garden.json  competitive_setup.json  lumiose_explorer.json  mega_collection.json  starter_pack.json  tm_collection.json
requirements/: build.txt
src/plaza/crypto/: fnvhash.py  scblock.py  scxorshift.py  swishcrypto.py
src/plaza/types/: accessors.py  bagsave.py  coredata.py  pokedex.py
src/plaza/util/: item_db_cn.json
src/pokemon_legends_za_editor/: __init__.py  main.py  plza_config.py  plza_utils.py  preset_manager.py
