[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-legends-za-save-editor"
version = "1.0.0"
description = "Un éditeur de sauvegarde complet pour Pokemon Legends Z-A"
readme = "README.md"
authors = [
    {name = "MiniMax Agent"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
keywords = ["pokemon", "legends", "za", "save", "editor", "gui"]
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/your-username/pokemon-legends-za-save-editor"
Documentation = "https://github.com/your-username/pokemon-legends-za-save-editor/wiki"
"Bug Reports" = "https://github.com/your-username/pokemon-legends-za-save-editor/issues"

[project.gui-scripts]
pokemon-legends-za-editor = "pokemon_legends_za_editor.main:main"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt"]